# GATOH

./: CITATION.cff  Cargo.toml  README.md  cargo.toml  pyproject.toml
data/: Chocarpamba.csv  MatrixValues.json  Pangui.csv  Pangui.json  SurveyQuestionTypes.json  SurveyValues.json
data/MINNG/: MINNG_Cultural.csv  MINNG_Family.csv  MINNG_Friends.csv  MINNG_Geographical.csv  MINNG_Religion.csv  MINNG_Social.csv  Mining.csv
data/NONMN/: NONMN_Cultural.csv  NONMN_Family.csv  NONMN_Friends.csv  NONMN_Geographical.csv  NONMN_Religion.csv  NONMN_Social.csv  NonMining.csv  NonMining.json
experiments/Base/: influential_agents.py
experiments/Base/GraphAlgorithms/: blockmodel_model_variables.csv  graph_algorithms.py  random_model_variables.csv
experiments/Base/GraphAlgorithms/GraphAlgorithms_blockmodel/: graph_base_graph.graphml  model_2026-04-22 21:11:24.433817.yaml
experiments/Base/GraphAlgorithms/GraphAlgorithms_random/: graph_base_graph.graphml  model_2026-04-22 16:12:44.673746.yaml
experiments/Base/GraphAlgorithms/GraphAlgorithms_scale-free/: graph_base_graph.graphml
experiments/Base/InfluentialAgents/: influential_agents.py  plot_results.py
experiments/Base/RandomWalk/: BOTH_model_variables.csv  random_walk.py
experiments/Base/RandomWalk/RandomWalk_HIER/: model_2026-05-08 18:44:39.316459.yaml
experiments/Base/SocialSusceptibility/: ONE_model_variables.csv  POINT-EIGHT_model_variables.csv  social_susceptibility.py
experiments/Base/SocialSusceptibility/SocialSusceptibility_ONE/: model_2026-05-26 16:04:01.589492.yaml
experiments/Base/SocialSusceptibility/SocialSusceptibility_ZERO/: model_2026-05-26 15:06:48.357865.yaml
experiments/CaseStudy/: DataSynthesiser.py  TableReader.py
experiments/Chocarpamba-Pangui/: DataReader.py  DataSynthesiser.py  ResponseParser.py  TableReader.py
gatoh/: __main__.py  agents.py  graphs.py  model.py
gatoh/agents/: agents.py
gatoh/experiments/Base/GraphAlgorithms/: graph_algorithms.py  plot_results.py  (+2 more)
gatoh/experiments/CaseStudy/: DataReader.py  ResponseParser.py  TableReader.py
gatoh/graphs/: graphs.py
gatoh/model/: model.py
gatoh/tests/: full_random_run.py  model_creation.py
gatoh/utils/: utils.py
gatoh/visualisation/: visualisation.py
src/: lib.rs  main.rs
src/GATOH/: __main__.py  agents.py  agents.rs  graphs.py  logging.py  model.py  utils.py
src/UKUMARI/: __main__.py  agent_space.py  agents.py  graphs.py  logging.py  model.py  utils.py  visualisation.py
src/agents/: agents.rs
src/graphs/: graphs.rs
src/rust_gatoh/: agents.rs
src/utils/: graphml.rs  mod.rs  utils.rs
tests/: full_random_run.py
(+1086 files in other folders)
