[build-system]
requires = ["uv_build >= 0.8.22"]
build-backend = "uv_build"

[project]
name = "UKUMARI"
version = "0.0.1"
authors = [
    { name="Manuel Munizaga Sepulveda", email="manuel.chile@yahoo.com" },
]
description = "An open source agent-based modelling framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uv-build>=0.8.22",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/JungleHollow/UKUMARI"
Issues = "https://github.com/JungleHollow/UKUMARI/issues"
