[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gatoh"
version = "0.0.2"
authors = [
    { name="Manuel Munizaga Sepulveda", email="manuel.chile@yahoo.com" },
]
description = "An open source agent-based modelling framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "polars",
    "rustworkx",
    "matplotlib",
    "scipy",
    "pyyaml"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/JungleHollow/GATOH"
Issues = "https://github.com/JungleHollow/GATOH/issues"

[tool.setuptools.packages]
find = {}
